# esp-test

./: .gitignore  Cargo.toml  build.rs  diagram.json  elf.info  nm.out  objdump-bss-2.out  objdump-bss.out  objdump-dram-2.out  objdump.out  objdump2.out  objdump3.out  objdump4.out  objdump5.out  partitions.csv  wokwi.toml
.cargo/: config.toml
src/: config.rs  filesystem.rs  https.rs  lets_encrypt_ca.rs  lib.rs  ntp.rs
src/net/: ca_certs.rs  mod.rs  ntp.rs
src/wifi/: mod.rs
