[package]
edition = "2024"
name = "esp-test"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "esp-test"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
    "esp32",
    "log-04",
    "unstable",
    "rt",
] }
log = "0.4.27"

embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "log",
    "dns",
    "tcp",
    "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.15.0", features = ["esp32", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
    "log",
    "task-arena-size-40960",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
    #  "ble",
    "builtin-scheduler",
    #  "coex",
    "esp-alloc",
    "esp32",
    "log-04",
    "wifi",
] }
static_cell = "2.1.1"
trouble-host = { version = "0.2.4", features = ["default-packet-pool-mtu-255"] }
rand_core = "0.9.3"
reqwless = { git = "https://github.com/drogue-iot/reqwless.git", default-features = false, features = [
    "esp-mbedtls",
    "log",
] }
# And include esp-mbedtls manually from its repository
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", features = [
    "esp32",
] }
sntpc = { version = "0.6.0", default-features = false, features = [
    "log",
    "embassy-socket",
] }
thiserror = { version = "2.0.16", default-features = false }
ouroboros = { version = "0.18.5", default-features = false }
embedded-nal-async = "0.8.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false

incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
